kubernetes-templating/frontend/templates/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manage.io/acme-challenge-type: http01
    kubernetes.io/ingress.class: nginx
spec:
  #ingressClassName: nginx
  tls:
    - hosts:
      - shop.51.250.76.10.nip.io
      secretName: shop-tls
  rules:
  - host: shop.51.250.76.10.nip.io
    http:
      paths:
      - pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 8080
        path: /
